--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,16 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: var(--slate);
+  background-color: var(--white);
 }
 /* LOGO */
 .logo {
   font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  letter-spacing: 0.03em;
   font-weight: 800;
   line-height: 1.17;
   text-transform: uppercase;
-  text-decoration: none;
   color: var(--iris);
 }
 .logo .studio {
@@ -38,8 +40,8 @@ body {
 .link-nav {
   font-weight: 500;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--navy-blue);
-  text-decoration: none;
 }
 .site-nav .current {
   color: var(--ocean);
@@ -53,7 +55,6 @@ body {
   line-height: 1.5;
   font-style: normal;
   color: var(--slate);
-  text-decoration: none;
 }
 /* address */
 .adrs .link-adrs:hover,
@@ -61,25 +62,39 @@ body {
   color: var(--ocean);
 }
 /* main */
+.hero {
+  background-color: var(--navy-blue);
+}
 .hero-title {
   font-weight: 700;
   line-height: 1.07;
+  font-size: 56px;
+  text-align: center;
+  letter-spacing: 0.02em;
   color: var(--white);
 }
 .btn {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.04em;
   font-weight: 500;
   line-height: 1.5;
   color: var(--white);
   background-color: var(--iris);
+  cursor: pointer;
 }
 .hero .btn:hover,
 .hero .btn:focus {
   background-color: var(--ocean);
 }
 /* main advantages */
+.advantages {
+}
 .header-two {
   font-weight: 700;
-  line-height: 1.11;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  font-size: 20px;
   color: var(--navy-blue);
 }
 .header-three {
@@ -111,6 +126,7 @@ body {
 .text {
   font-weight: 400;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--slate);
 }
 .header-portf {
