--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,13 @@ body {
   background-color: var(--navy-blue);
 }
 /* PORTFOLIO */
+
 .btn-portfolio {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  line-height: 1.5;
   color: var(--iris);
   background-color: var(cloud);
 }
