--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,6 @@
   --light-slate: #8e8f99;
   --cornflower: #e7e9fc;
   --cloud: #f4f4fd;
-  --navy-blue-modal: #2e2f42;
-  --grey: #2e2f42;
   --white: #ffffff;
   --dairy: #fcfcfc;
 }
@@ -56,6 +54,7 @@ body {
 .adrs .link-adrs {
   font-weight: 400;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--slate);
 }
 /* address */
@@ -144,8 +143,9 @@ body {
   letter-spacing: 0.04em;
   font-weight: 500;
   line-height: 1.5;
+  cursor: pointer;
   color: var(--iris);
-  background-color: var(cloud);
+  background-color: var(--cloud);
 }
 .btn-portfolio:hover,
 .btn-portfolio:focus {
@@ -155,6 +155,8 @@ body {
 
 .header-portf {
   font-weight: 500;
+  font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--navy-blue);
 }
